overlays/dev/dashboard/merge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  labels:
    app: dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: app.dev.adomate.ai
      http:
        paths:
          - backend:
              service:
                name: dashboard-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app.dev.adomate.ai
      secretName: app-adomate-ai-tls
